# rabbithole

./: .env.example  .gitignore  README.md  agent.py  db.py  ingest.py  main.py  models.py  pyproject.toml  requirements.txt
assets/: conversations.json
services/: akash.py  yousearch.py
templates/: base.html  dashboard.html  rabbit_hole.html  rabbit_holes.html  welcome.html
